--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs    # important for GitHub Pages (serve from /docs)
 
 book:
-  title: "Global Biostatistical Commons"
+  title: "The Biostatistical Commons"
   subtitle: "A Collaborative Reference Platform for Biostatisticians"
   author: 
     - name: Alexandra Mossman
@@ -41,7 +41,7 @@ book:
 
   page-footer:
     left: |
-      Global Biostatistical Commons
+      The Biostatistical Commons
     right: |
       Built with [Quarto](https://quarto.org)
     background: "#2C3E50"   # footer background color
